--- a/apps/frontend/frontend/src/index.html
+++ b/apps/frontend/frontend/src/index.html
@@ -5,6 +5,10 @@
     <title>Frontend</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+    />
   </head>
   <body>
     <div id="root"></div>
